--- a/src/css/CalendarDate.css
+++ b/src/css/CalendarDate.css
@@ -1,6 +1,7 @@
 .CalendarDate {
     padding-top: 0.3em;
     padding-left: 0.7em;
+    margin: calc(var(--panel-item-outline-width) / 2);
     outline: var(--panel-item-outline);
     user-select: none;
 }
@@ -14,6 +15,6 @@
     background-color: rgba(135, 225, 255, 0.5);
 }
 
-.form-date-selection {
+.CalendarDate.form-date-selection {
     background-color: rgba(128, 128, 128, 0.5);
 }
